text update! + new draw text function. it draws text to the screen! + custom itoa implementation "armBoyItoa" because ARMs version is f**cked + update tetris example to have text! score & lines removed + game over screen!

--- a/examples/tetris/Makefile
+++ b/examples/tetris/Makefile
@@ -1,5 +1,5 @@
 CC = arm-none-eabi-gcc
-CFLAGS = --std=gnu11 -Ofast -nostartfiles -fPIC -mcpu=cortex-m3 -mthumb -fno-builtin  -ffreestanding   --specs=nosys.specs --specs=nano.specs -Tprog.ld -Wl,-N
+CFLAGS = --std=gnu11 -Ofast -nostartfiles -fpic  -mcpu=cortex-m3 -mthumb --specs=nosys.specs -Tprog.ld -Wl,-N
 OBYCP = arm-none-eabi-objcopy
 
 INCLUDE = -I ../../src/
